--- a/QuizApp/app/src/main/res/values/strings.xml
+++ b/QuizApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">QuizApp</string>
+    <string name="string_app_name">Quiz App!</string>
+    <string name="welcome_string">Welcome</string>
+    <string name="your_name_string">Please enter your name.</string>
+    <string name="name_string">Name</string>
+    <string name="start_string">Start</string>
 </resources>
