--- a/QuizApp/app/src/main/res/values/strings.xml
+++ b/QuizApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">QuizApp</string>
-    <string name="string_app_name">Quiz App!</string>
+    <string name="app_name">Fun With Flags</string>
+    <string name="string_app_name">Fun With Flags!</string>
     <string name="welcome_string">Welcome</string>
     <string name="your_name_string">Please enter your name.</string>
     <string name="name_string">Name</string>
