--- a/QuizApp/app/src/main/res/values/strings.xml
+++ b/QuizApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="your_name_string">Please enter your name.</string>
     <string name="name_string">Name</string>
     <string name="start_string">Start</string>
+    <string name="flag_question">What country does this flag belong to?</string>
+    <string name="content_desc_img">image</string>
+    <string name="submit">SUBMIT</string>
 </resources>
