--- a/QuizApp/app/src/main/res/values/strings.xml
+++ b/QuizApp/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="finish">FINISH</string>
     <string name="submit_caps">SUBMIT</string>
     <string name="next_question">GO TO NEXT QUESTION</string>
+    <string name="result">Result</string>
+    <string name="image">image</string>
+    <string name="congrats">Hey, Congratulations!</string>
 </resources>
